Changelog
=========

1.0b2 - Unreleased
------------------

1.0b1 - 2010-02-18
------------------

- Added example CSS to ploneCustom.css on how to enable the first levels of breadcrumbs.
  This fixes http://dev.plone.org/plone/ticket/9987
  [limi]

- Removed #region-content and .documentContent from all templates, as they are redundant.
  See http://dev.plone.org/plone/ticket/10231 for details.

- Updated prefs_main_template.pt and personalize_form.pt to the recent markup
  conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter]
  
- Moved 'content' slot to the same place as it is in CMFPlone's
  main_template.pt. Having the same slot in different places is confusing.
  References http://dev.plone.org/plone/ticket/9981
  [spliter]

- Wrapped .contentViews and .contentActions with <div id="edit-bar"> in
  author.pt.
  [spliter]

- Add html id to personal bar actions.
  [paul_r]

- Align the personal tools drop-down submenu to the left for
  RTL scripts.
  Fixes http://dev.plone.org/plone/ticket/10181.
  [emanlove]

- Updated templates to disable the columns with 'disable_MANAGER_NAME'
  pattern.
  [spliter]

- Removed action drop-down submenu right alignment for RTL scripts.
  Re-fixes http://dev.plone.org/plone/ticket/9651.
  [emanlove]

- Some sunburst for the site actions.
  Refs http://dev.plone.org/plone/ticket/10176
  [pelle]

- Remove common CSS registries. 
  Refs http://dev.plone.org/plone/ticket/9988.
  [dukebody]

- Copied updated structure of 'main' slot from classic theme to Sunburst
  [spliter]

1.0a5 - 2010-02-01
------------------

- Move the login overlay form labels slightly down to align vertically
  with their associated fields.
  Refs http://dev.plone.org/plone/ticket/10021.
  [dukebody]

- Align the action drop-down submenu to the right.
  Fixes http://dev.plone.org/plone/ticket/10074.
  [dukebody]

- Remove the ability for anonymous to send author feedback again. A quick